Fix logo line height, fix z-index on nav, fix background colors

--- a/styles.css
+++ b/styles.css
@@ -2,9 +2,13 @@ body {
     margin: 0px;
     padding: 0px;
     height: 100%;
-    background-color: black;
+    background-color: #101116;
     font-family: 'Strait', sans-serif;
     color: #ededed;
+}
+
+header {
+    z-index: 100;
 }
 
 a {
@@ -14,14 +18,14 @@ a {
 }
 
 .wallpaper {
-    background-image: radial-gradient(#363f55, #1b1c25);
+    background-image: radial-gradient(#1b1f29, #101116);
     z-index: -1;
     margin: 0px;
     padding: 0px;
     position: fixed;
     width: 100%;
     height: 100%; 
-    opacity: 0.5;
+    opacity: 1;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -47,6 +51,7 @@ nav {
 
 #nav {
     display: inline;
+    z-index: 100;
 }
 
 nav ul li {
@@ -77,7 +82,7 @@ nav #selectedPage {
     font-size: 2em;
     font-weight: bold;
     width: 1.5em;
-    line-height: 0.78em;
+    line-height: 0.74em;
 }
 
 .logo a {
